--- a/src/app/components/admin-template/admin-template.component.css
+++ b/src/app/components/admin-template/admin-template.component.css
@@ -19,6 +19,7 @@
   background-color: #e6e7ee;
   box-shadow: 2px 2px 5px #b8b9be;
   margin-left: 1rem;
+  margin-bottom: 1rem;
 }
 
 .template-name-container > ::ng-deep .mat-form-field {
@@ -99,6 +100,72 @@
   max-width: 100% !important;
   overflow-x: hidden !important;
   margin-bottom: 1rem !important;
-  padding: 1rem;
+  padding-bottom: 1rem;
   padding-right: 2rem;
+}
+
+.button-neumorphism.delete-template-btn,
+.button-neumorphism.activate-template-btn {
+  font-size: 0.9rem;
+  border-radius: 2rem;
+  padding: 0.55rem 0.9rem 0.55rem 0.9rem;
+}
+
+.activate-template-btn {
+  border-right: none !important;
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
+
+.delete-template-btn {
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+}
+
+.admin-template-container .row {
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+.badge-status {
+  border-radius: 2rem;
+  padding-top: 0.4rem;
+  padding-bottom: 0.4rem;
+  margin-top: 1rem;
+  width: 53%;
+  margin-left: 20%;
+  color: white;
+}
+
+.circle {
+  width: 2rem;
+  height: 0.7rem;
+  display: inline-flex;
+  border-radius: 1rem;
+  margin-right: 1rem;
+}
+
+.badge-status input[type="color"] {
+  width: 2rem;
+  color: transparent;
+  background: transparent;
+  border: none;
+  z-index: 2;
+}
+.badge-val {
+  display: inline-flex;
+  vertical-align: super;
+}
+.badge-status input[type="color"]::-webkit-color-swatch {
+  border: 0.0625rem solid #d1d9e6;
+  border-radius: 1rem;
+  vertical-align: middle;
+}
+
+.create-template .badge-status {
+  padding-left: 3rem;
+  width: 90% !important;
+  margin-left: 0 !important;
+  color: white;
+  margin-top: 1.7rem;
 }
