--- a/src/app/partials/settings/settings.component.css
+++ b/src/app/partials/settings/settings.component.css
@@ -39,3 +39,257 @@ h4 {
   width: 11% !important;
   margin-right: 2rem;
 }
+
+::ng-deep.p-dialog .p-dialog-header {
+  border-bottom: 0.1rem solid #d1d9e6 !important;
+  background-color: transparent !important;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+::ng-deep.p-editor-container .p-editor-toolbar.ql-snow {
+  border: 0.0625rem solid #d1d9e6;
+}
+
+::ng-deep.p-editor-container .p-editor-toolbar {
+  background: #e6e7ee;
+  border-top-right-radius: 1rem;
+  border-top-left-radius: 1rem;
+  position: sticky;
+  z-index: 3;
+  top: -20px;
+  box-shadow: 0px 8px 9px -8px #b8b9be;
+}
+
+::ng-deep.p-editor-container .p-editor-content .ql-editor {
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
+  background: #e6e7ee;
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  height: 17rem;
+}
+
+::ng-deep.p-editor-container .p-editor-content.ql-snow {
+  border: 0.0625rem solid #d1d9e6;
+}
+
+::ng-deep.p-editor-container .p-editor-content {
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  margin-bottom: 2rem;
+}
+
+::ng-deep.p-editor-container
+  .p-editor-toolbar.ql-snow
+  .ql-picker.ql-expanded
+  .ql-picker-options {
+  background: #e6e7ee;
+  border: 0.0625rem solid #d1d9e6;
+  box-shadow: 2px 2px 5px #b8b9be;
+  border-radius: 1rem;
+  padding: 1rem;
+}
+
+::ng-deep.ql-snow .ql-color-picker .ql-picker-options {
+  width: 15rem;
+}
+
+::ng-deep.p-editor-container
+  .p-editor-toolbar.ql-snow
+  .ql-picker.ql-expanded
+  .ql-picker-options
+  .ql-picker-item {
+  border-radius: 0.5rem;
+}
+
+::ng-deep
+  .p-editor-container
+  .p-editor-toolbar.ql-snow
+  .ql-align.ql-expanded
+  .ql-picker-options
+  .ql-picker-item {
+  width: 26px !important;
+}
+
+::ng-deep.ql-toolbar.ql-snow .ql-color-picker .ql-picker-item:hover {
+  border-color: #d1d9e6;
+}
+
+::ng-deep.ql-toolbar.ql-snow .ql-color-picker .ql-picker-item.ql-selected {
+  border-color: #d1d9e6;
+}
+
+::ng-deep.p-editor-container
+  .p-editor-toolbar.ql-snow
+  .ql-picker.ql-expanded
+  .ql-picker-options
+  .ql-picker-item:hover {
+  background: #e0e1e9;
+}
+
+::ng-deep.ql-snow.ql-toolbar .ql-picker-item.ql-selected .ql-stroke {
+  stroke: #44476a !important;
+  stroke-width: 3px;
+}
+::ng-deep.ql-snow.ql-toolbar .ql-picker-item:hover .ql-stroke {
+  stroke: #44476a;
+}
+
+::ng-deep.ql-snow.ql-toolbar .ql-picker-label.ql-active .ql-stroke {
+  stroke: #44476a !important;
+}
+
+::ng-deep.p-editor-container .ql-snow.ql-toolbar .ql-picker-label.ql-active {
+  color: #44476a;
+  background: #d2d3db;
+  border-radius: 0.7rem;
+}
+
+::ng-deep.p-editor-container .ql-snow.ql-toolbar button.ql-active {
+  color: #44476a;
+  background: #d2d3db;
+  border-radius: 0.7rem;
+}
+
+::ng-deep.p-editor-container .ql-snow.ql-toolbar button.ql-active .ql-stroke {
+  stroke: #44476a;
+}
+
+::ng-deep.ql-snow .ql-tooltip {
+  background: #e6e7ee;
+  border: 0.0625rem solid #d1d9e6;
+  box-shadow: 2px 2px 5px #b8b9be;
+  border-radius: 1rem;
+  padding: 1rem;
+  left: 10rem !important;
+}
+
+::ng-deep.ql-snow .ql-tooltip input[type="text"] {
+  padding: 0.6rem 0.75rem;
+  color: #44476a;
+  background-color: #e6e7ee;
+  border: 0.0625rem solid #d1d9e6;
+  transition: all 0.3s ease-in-out;
+  border-top-left-radius: 0.99rem;
+  border-bottom-left-radius: 0.99rem;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  font-size: 13px;
+  height: 2rem;
+}
+
+::ng-deep.ql-snow .ql-tooltip input[type="text"]:hover {
+  outline: 0;
+  box-shadow: none;
+}
+
+::ng-deep.ql-snow .ql-tooltip input[type="text"]:focus {
+  outline: 0;
+  box-shadow: none;
+}
+
+::ng-deep .ql-snow .ql-tooltip a {
+  color: #44476a;
+  border: 0.0625rem solid #d1d9e6;
+  border-left: none;
+  background-color: #e6e7ee;
+  padding: 0.4rem 0.75rem;
+  border-top-right-radius: 0.99rem;
+  border-bottom-right-radius: 0.99rem;
+}
+
+::ng-deep.ql-snow .ql-tooltip a.ql-action::after {
+  margin-left: 0;
+}
+
+::ng-deep.ql-snow.ql-toolbar button:hover,
+::ng-deep.ql-snow.ql-toolbar button:focus {
+  outline: 0;
+  color: #44476a;
+  background: #d2d3db;
+  border-radius: 0.7rem;
+}
+
+.templateForm h6 {
+  font-weight: 700;
+  margin-bottom: 0 !important;
+  padding-top: 0.1rem;
+  position: absolute;
+}
+
+.templateForm .iconClose-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding-right: 1.1rem;
+}
+
+.templateForm .iconbutton-neumorphism {
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  font-weight: bold;
+  font-family: cursive;
+}
+
+.templateForm .iconUser-container .iconbutton-neumorphism {
+  box-shadow: none;
+  font-family: system-ui;
+}
+
+.templateForm .iconUser-container {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  position: absolute;
+  top: 1.8rem;
+}
+
+.iconClose-container .iconbutton-neumorphism {
+  width: 1.5rem;
+  height: 1.5rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: 0.4rem;
+  font-size: smaller;
+}
+
+.recipient-container {
+  padding-left: 3.5rem;
+}
+
+.recipient-container i {
+  margin: 0;
+}
+
+.sender-container {
+  padding-left: 2.5rem;
+  margin-bottom: 0;
+}
+
+.template-container {
+  padding-left: 3.5rem;
+}
+
+.date-container {
+  padding-right: 1.3rem;
+}
+
+.sms-container {
+  background-color: #e0e1e9;
+  border: 0.0625rem solid #d1d9e6;
+  border-radius: 2rem;
+  padding: 1rem;
+  text-align: left;
+  float: right;
+  width: fit-content;
+  margin-left: 20%;
+  max-width: 100%;
+  overflow-wrap: anywhere;
+}
+
+.sms-main-container ::ng-deep .p-dialog {
+  width: 31vw !important;
+}
+
+.txtTemplate {
+  min-height: 5rem !important;
+  height: 5rem;
+}
