--- a/src/app/partials/settings/settings.component.html
+++ b/src/app/partials/settings/settings.component.html
@@ -11,7 +11,7 @@
         </div>
         <button
           class="mini-iconbutton-neumorphism add-icon"
-          (click)="toggleVM()"
+          (click)="toggleTemplate('vm')"
           matTooltip="Record new voice mail"
           matTooltipPosition="above"
         >
@@ -21,11 +21,12 @@
       </div>
       <div
         class="form-check form-check-inline width-100 option-container"
-        *ngFor="let vm of optVoiceMail"
-        id="{{ vm.voiceMailId }}"
+        *ngFor="let vm of optVoiceMail; let index = index"
+        id="{{ vm.templateId }}"
       >
-        <label class="margin-right width-100">{{ vm.voiceMailName }}</label>
+        <label class="margin-right width-100">{{ vm.templateName }}</label>
         <button
+          (click)="previewTemplate(index, 'vm')"
           class="mini-iconbutton-neumorphism"
           matTooltip="Listen"
           matTooltipPosition="above"
@@ -33,13 +34,15 @@
           <i class="bi bi-headset i-neumorphism"></i>
         </button>
         <button
+          (click)="editTemplate(index, 'vm')"
           class="mini-iconbutton-neumorphism"
-          matTooltip="Record"
+          matTooltip="R-Record "
           matTooltipPosition="above"
         >
           <i class="bi bi-mic-fill i-neumorphism"></i>
         </button>
         <button
+          (click)="deleteTemplate(index, 'vm', vm.templateName)"
           class="mini-iconbutton-neumorphism"
           matTooltip="Delete"
           matTooltipPosition="above"
@@ -57,22 +60,22 @@
         </div>
         <button
           class="mini-iconbutton-neumorphism add-icon"
-          (click)="toggleSMS()"
+          (click)="toggleTemplate('sms')"
           matTooltip="Create new SMS message template"
           matTooltipPosition="above"
         >
-          <i class="bi bi-plus-circle-fill" *ngIf="!tglSMS"></i>
-          <i class="bi bi-x-circle-fill" *ngIf="tglSMS"></i>
+          <i class="bi bi-plus-circle-fill"></i>
         </button>
       </div>
 
       <div
         class="form-check form-check-inline width-100 option-container"
-        *ngFor="let sms of optSMS"
-        id="{{ sms.smsId }}"
+        *ngFor="let sms of optSMS; let index = index"
+        id="{{ sms.templateId }}"
       >
-        <label class="margin-right width-100">{{ sms.smsName }}</label>
+        <label class="margin-right width-100">{{ sms.templateName }}</label>
         <button
+          (click)="previewTemplate(index, 'sms')"
           class="mini-iconbutton-neumorphism"
           matTooltip="Preview"
           matTooltipPosition="above"
@@ -80,6 +83,7 @@
           <i class="bi bi-chat-left-text i-neumorphism"></i>
         </button>
         <button
+          (click)="editTemplate(index, 'sms')"
           class="mini-iconbutton-neumorphism"
           matTooltip="Edit"
           matTooltipPosition="above"
@@ -87,6 +91,7 @@
           <i class="bi bi-pencil-square i-neumorphism"></i>
         </button>
         <button
+          (click)="deleteTemplate(index, 'sms', sms.templateName)"
           class="mini-iconbutton-neumorphism"
           matTooltip="Delete"
           matTooltipPosition="above"
@@ -105,21 +110,21 @@
         </div>
         <button
           class="mini-iconbutton-neumorphism add-icon"
-          (click)="toggleEmail()"
+          (click)="toggleTemplate('email')"
           matTooltip="Create new email template"
           matTooltipPosition="above"
         >
-          <i class="bi bi-plus-circle-fill" *ngIf="!tglEmail"></i>
-          <i class="bi bi-x-circle-fill" *ngIf="tglEmail"></i>
+          <i class="bi bi-plus-circle-fill"></i>
         </button>
       </div>
       <div
         class="form-check form-check-inline width-100 option-container"
-        *ngFor="let email of optEmail"
-        id="{{ email.emailId }}"
+        *ngFor="let email of optEmail; let index = index"
+        id="{{ email.templateId }}"
       >
-        <label class="margin-right width-100">{{ email.emailName }}</label>
+        <label class="margin-right width-100">{{ email.templateName }}</label>
         <button
+          (click)="previewTemplate(index, 'email')"
           class="mini-iconbutton-neumorphism"
           matTooltip="Preview"
           matTooltipPosition="above"
@@ -127,6 +132,7 @@
           <i class="bi bi-card-text i-neumorphism"></i>
         </button>
         <button
+          (click)="editTemplate(index, 'email')"
           class="mini-iconbutton-neumorphism"
           matTooltip="Edit"
           matTooltipPosition="above"
@@ -134,6 +140,7 @@
           <i class="bi bi-pencil-square i-neumorphism"></i>
         </button>
         <button
+          (click)="deleteTemplate(index, 'email', email.templateName)"
           class="mini-iconbutton-neumorphism"
           matTooltip="Delete"
           matTooltipPosition="above"
@@ -144,4 +151,133 @@
     </div>
   </div>
 </div>
+<p-dialog
+  [(visible)]="tglTemplate"
+  [breakpoints]="{ '960px': '75vw' }"
+  [style]="{ width: '50vw' }"
+  [draggable]="true"
+  [resizable]="false"
+  [closable]="false"
+  class="templateForm"
+  *ngIf="tglTemplate"
+  [ngClass]="tglSMS && tglPrevTemplate ? 'sms-main-container' : ''"
+>
+  <ng-template pTemplate="header">
+    <div class="width-100" *ngIf="tglPrevTemplate === ''">
+      <h6 class="show-line">{{ tglTitle }}</h6>
+      <div class="iconClose-container float-rt no-padding-rt">
+        <button class="iconbutton-neumorphism" (click)="cancelCreateTemplate()">
+          X
+        </button>
+      </div>
+    </div>
+
+    <div *ngIf="tglPrevTemplate" class="width-100 preview-on">
+      <div class="iconUser-container" *ngIf="tglEmail">
+        <button class="iconbutton-neumorphism">
+          {{ initialsName }}
+        </button>
+      </div>
+      <label *ngIf="tglEmail" class="margin-lt sender-container">{{
+        userInfo.name
+      }}</label>
+      <h6 *ngIf="tglSMS || tglVM">{{ tglTitle }}</h6>
+
+      <div
+        class="iconClose-container float-rt"
+        [ngClass]="tglSMS ? 'no-padding-rt' : ''"
+      >
+        <button class="iconbutton-neumorphism" (click)="cancelCreateTemplate()">
+          X
+        </button>
+      </div>
+      <br />
+      <small class="recipient-container width-100" *ngIf="tglEmail"
+        >To: <i class="margin-lt">previewEmailTemplate@preview.com</i></small
+      >
+
+      <small *ngIf="tglEmail" class="float-rt date-container">{{
+        todayDate
+      }}</small>
+    </div>
+  </ng-template>
+  <div>
+    <form [formGroup]="templateForm" *ngIf="templateForm" novalidate>
+      <div class="form-row width-100">
+        <div class="col-md-12">
+          <mat-form-field
+            appearance="standard"
+            class="txtFormComponent"
+            *ngIf="tglPrevTemplate === ''"
+          >
+            <mat-label>Template name</mat-label>
+            <input
+              matInput
+              class="input-neumorphism"
+              type="text"
+              placeholder="Template name"
+              formControlName="templateName"
+            />
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="form-row width-100">
+        <div class="col-md-12">
+          <p-editor
+            *ngIf="tglEmail && tglPrevTemplate === ''"
+            formControlName="templateContent"
+          ></p-editor>
+          <textarea
+            *ngIf="tglSMS && tglPrevTemplate === ''"
+            rows="1"
+            pInputTextarea
+            [autoResize]="true"
+            class="input-neumorphism txtTemplate"
+            placeholder="New SMS message"
+            formControlName="templateContent"
+          ></textarea>
+
+          <div *ngIf="tglPrevTemplate">
+            <div *ngIf="tglSMS" class="txt-center">
+              <small>{{ todayDate }}</small>
+            </div>
+            <br />
+            <div
+              *ngFor="let prev of tglPrevTemplate"
+              class="template-container"
+              [ngClass]="tglSMS ? 'sms-container' : ''"
+              [innerHTML]="prev.templateContent"
+            ></div>
+          </div>
+        </div>
+      </div>
+      <div class="form-row width-100" *ngIf="tglPrevTemplate === ''">
+        <div class="col-md-6">
+          <button
+            [disabled]="!templateForm.valid"
+            [ngClass]="
+              !templateForm.valid
+                ? 'button-neumorphism-disabled'
+                : 'button-neumorphism'
+            "
+            (click)="saveCreateTemplate()"
+            class="width-100 button-neumorphism"
+          >
+            Save
+          </button>
+        </div>
+        <div class="col-md-6">
+          <button
+            (click)="cancelCreateTemplate()"
+            class="width-100 button-neumorphism"
+          >
+            Cancel
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</p-dialog>
+<p-toast life="5000" position="top-center"></p-toast>
+<p-confirmDialog rejectLabel="Cancel" acceptLabel="Accept"></p-confirmDialog>
 <p-scrollTop [threshold]="200"></p-scrollTop>
